--- a/index.html
+++ b/index.html
@@ -10,12 +10,9 @@
     <body>
         <h1>Liste des fruits :</h1>
         <ul>
-            <li>Pome</li>
-            <li>Carote</li>
-            <li>Salade</li>
+            <li>Pomme</li>
             <li>Poire</li>
-            <li>Tommate</li>
-            <li>Cerisse</li>
+            <li>Cerise</li>
         </ul>
     </body>
 </html>
